--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -65,3 +65,9 @@ footer {
 .active::after {
   width: 100%;
 }
+
+.navbar-toggler:focus,
+.navbar-toggler:active {
+    outline: none;
+    box-shadow: none;
+}
