--- a/views/home.html
+++ b/views/home.html
@@ -1,136 +1,64 @@
 <!-- 
-   But     : Main view  
-   Auteur  : Noé Henchoz
+   But     : Home view
+   Auteur  : Noé Henchoz'
    Date    : 26.05.2022 / v1.0 
 -->
 
 <!DOCTYPE html>
 
-<p class="text-center">Ceci est un test, je suis la view "home.html"</p>
-<p class="text-justify">Vous n'avez pas encore ajouté de stations météo... Rendez-vous dans l'onglet "Stations" ou taper
-    un nom de ville dans la zone de recherche dans la barre de navigation pour en
-    ajouter une</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere magni deleniti, excepturi perferendis
-    veritatis
-    exercitationem, esse officia nisi natus nemo ipsam cupiditate eum, dolorum ratione! Amet quis libero voluptatum
-    repellat?
-</p>
+<div class="row">
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 1
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 2
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 3
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 4
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 5
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 6
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 7
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 8
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 9
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 10
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 11
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 12
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 13
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 14
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 15
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 station">
+        Station 16
+    </div>
+</div>
