--- a/views/home.html
+++ b/views/home.html
@@ -6,61 +6,6 @@
 
 <!DOCTYPE html>
 
-<div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        <p id="api-text">Station 1</p>
-        <input id="api-input" name="input">
-        <button class="btn btn-primary" id="api-btn" onclick="indexCtrl.find();">Trouver</button>
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 2
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 3
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 4
-    </div>
-</div>
-<div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 5
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 6
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 7
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 8
-    </div>
-</div>
-<div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 9
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 10
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 11
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 12
-    </div>
-</div>
-<div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 13
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 14
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 15
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12 station">
-        Station 16
-    </div>
+<div class="container">
+    <p>Text here</p>
 </div>
