--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -8,7 +8,7 @@ html{background-color: #fff;}
 
 body {
   margin-bottom: 150px;
-  background-image: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );
+  background-color: rgb(168,199,252);
 }
 
 /* Imports fonts */
@@ -36,11 +36,7 @@ body {
 .navbar-toggler:focus,
 .navbar-toggler:active {outline: none;box-shadow: none;}
 
-.station {
-  height: 250px;
-  border: 1px solid black;
-}
-
+/* Title of each view */
 .title-view-anime {
   animation: fromLeftWithBlur 1s;
   font-weight: bold;
@@ -62,7 +58,7 @@ footer {
 /* Buttons footer */
 .btn-footer {transform: scale(1);transition: transform 0.2s ease-in-out;}
 
-.btn-footer:hover {transform: scale(1.1);transition: transform 0.2s ease-in-out;}
+.btn-footer:hover {transform: scale(1.3);transition: transform 0.2s ease-in-out;}
 
 
 /* Keyframes animations */
