--- a/views/home.html
+++ b/views/home.html
@@ -8,41 +8,42 @@
 
 <div class="container">
 
-    <p class="display-4 mt-3 title-view-anime">Bienvenue sur météhenchoz&#160;!</p>
+    <p class="display-4 mt-3 mb-4 title-view-anime">Bienvenue sur météhenchoz&#160;!</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ipsam tempore, esse, saepe repellendus obcaecati
-        aperiam laboriosam hic magnam commodi, totam eos! Eos ullam adipisci fugit optio nulla dolores placeat?</p>
+    <div class="container-sm">
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="6000">
+                    <img src="https://marmotamaps.com/de/fx/wallpaper/download/faszinationen/Marmotamaps_Wallpaper_Berchtesgaden_Desktop_1920x1080.jpg"
+                        class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="6000">
+                    <img src="https://marmotamaps.com/de/fx/wallpaper/download/faszinationen/Marmotamaps_Wallpaper_Berchtesgaden_Desktop_1920x1080.jpg"
+                        class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="6000">
+                    <img src="https://marmotamaps.com/de/fx/wallpaper/download/faszinationen/Marmotamaps_Wallpaper_Berchtesgaden_Desktop_1920x1080.jpg"
+                        class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio totam officia incidunt ipsum est mollitia
+        sit, a dolorum officiis atque molestiae corporis tempore iusto id fuga earum ipsa laboriosam odit.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio totam officia incidunt ipsum est mollitia
+        sit, a dolorum officiis atque molestiae corporis tempore iusto id fuga earum ipsa laboriosam odit.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio totam officia incidunt ipsum est mollitia
+        sit, a dolorum officiis atque molestiae corporis tempore iusto id fuga earum ipsa laboriosam odit.</p>
 
 </div>
